--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
+html{
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+/*.App {
   text-align: center;
 }
 
@@ -36,3 +43,4 @@
     transform: rotate(360deg);
   }
 }
+*/
