--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,4 +1,4 @@
-.sidebar{
+.sidebar {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -13,22 +13,22 @@
     align-items: center;
 }
 
-.sidebarContent{
+.sidebarContent {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
-.profileDetails{
+.profileDetails {
     margin-top: 2rem;
 }
 
-.profileImageDiv{
+.profileImageDiv {
     position: relative;
 }
 
-.notifications{
+.notifications {
     width: 2rem;
     height: 2rem;
     border-radius: 50%;
@@ -41,4 +41,38 @@
     position: absolute;
     top: -12px;
     right: 100px;
+}
+
+.userName {
+    margin-top: 1rem;
+    font-weight: 600;
+    font-size: 30px;
+}
+
+.userEmail {
+    margin-top: 1rem;
+    opacity: 0.6;
+}
+
+.sidebarNav {
+    margin-top: -8rem;
+    margin-bottom: 3rem;
+}
+
+.sidebarNavItem {
+    margin: 2rem 0;
+}
+
+.sidebarNavLink {
+    text-decoration: none;
+    outline: none;
+    color: white;
+    opacity: 0.5;
+    font-size: 25px;
+    font-weight: 500;
+
+    &Active {
+        @extend .sidebarNavLink;
+        opacity: 1;
+    }
 }
